refactored item and block registeration

--- a/src/main/resources/assets/advancedsolars/lang/en_us.lang
+++ b/src/main/resources/assets/advancedsolars/lang/en_us.lang
@@ -1,21 +1,21 @@
-tile.advancedsolars.advancedSolarPanel.name=Advanced Solar Panel
-tile.advancedsolars.hybridSolarPanel.name=Hybrid Solar Panel
-tile.advancedsolars.ultimateSolarPanel.name=Ultimate Hybrid Solar Panel
+tile.advancedSolarPanel.name=Advanced Solar Panel
+tile.hybridSolarPanel.name=Hybrid Solar Panel
+tile.ultimateSolarPanel.name=Ultimate Hybrid Solar Panel
 
-item.advancedsolars.sunnarium.name=Sunnarium
-item.advancedsolars.sunnarium_alloy.name=Sunnarium Alloy
-item.advancedsolars.irradiant_uranium.name=Irradiant Uranium
-item.advancedsolars.enriched_sunnarium.name=Enriched Sunnarium
-item.advancedsolars.enriched_sunnarium_alloy.name=Enriched Sunnarium Alloy
-item.advancedsolars.irradiant_glass_pane.name=Irradiant Glass Pane
-item.advancedsolars.iridium_iron_plate.name=Iridium Iron Plate
-item.advancedsolars.reinforced_iridium_iron_plate.name=Reinforced Iridium Iron Plate
-item.advancedsolars.irradiant_reinforced_plate.name=Irradiant Reinforced Plate
-item.advancedsolars.sunnarium_part.name=Sunnarium Part
-item.advancedsolars.iridium_ingot.name=Iridium Ingot
-item.advancedsolars.advanced_solar_helmet.name=Advanced Solar Helmet
-item.advancedsolars.hybrid_solar_helmet.name=Hybrid Solar Helmet
-item.advancedsolars.ultimate_hybrid_solar_helmet.name=Ultimate Hybrid Solar Helmet
+item.sunnarium.name=Sunnarium
+item.sunnariumAlloy.name=Sunnarium Alloy
+item.irradiantUranium.name=Irradiant Uranium
+item.enrichedSunnarium.name=Enriched Sunnarium
+item.enrichedSunnariumAlloy.name=Enriched Sunnarium Alloy
+item.irradiantGlassPane.name=Irradiant Glass Pane
+item.iridiumIronPlate.name=Iridium Iron Plate
+item.reinforcedIridiumIronPlate.name=Reinforced Iridium Iron Plate
+item.irradiantReinforcedPlate.name=Irradiant Reinforced Plate
+item.sunnariumPart.name=Sunnarium Part
+item.iridiumIngot.name=Iridium Ingot
+item.advancedSolarHelmet.name=Advanced Solar Helmet
+item.hybridSolarHelmet.name=Hybrid Solar Helmet
+item.ultimateHybridSolarHelmet.name=Ultimate Hybrid Solar Helmet
 
 tileInfo.storage.name=Stored: %1$s
 tileInfo.maxOutput.name=Max Output:
@@ -23,3 +23,4 @@ tileInfo.generating.name=Generating:
 
 itemInfo.helmetProduction.name=Produces %s EU/t while the sky is visible;
 itemInfo.helmetLowerProduction.name=Otherwise produces %s EU/t while the moon is visible or during rain
+itemInfo.electricLowerProduction.name=Lower Generation: %s EU
