fixed solar helmet names

--- a/src/main/resources/assets/advanced_solars/lang/en_us.json
+++ b/src/main/resources/assets/advanced_solars/lang/en_us.json
@@ -1,7 +1,7 @@
 {
   "block.advanced_solars.advanced_solar_panel": "Advanced Solar Panel",
   "block.advanced_solars.hybrid_solar_panel": "Hybrid Solar Panel",
-  "block.advanced_solars.ultimate_solar_panel": "Ultimate Hybrid Solar Panel",
+  "block.advanced_solars.ultimate_hybrid_solar_panel": "Ultimate Hybrid Solar Panel",
   "item.advanced_solars.sunnarium": "Sunnarium",
   "item.advanced_solars.sunnarium_alloy": "Sunnarium Alloy",
   "item.advanced_solars.irradiant_uranium": "Irradiant Uranium",
