--- a/src/main/resources/assets/advanced_solars/lang/ru_ru.json
+++ b/src/main/resources/assets/advanced_solars/lang/ru_ru.json
@@ -1,7 +1,7 @@
 {
   "block.advanced_solars.advanced_solar_panel": "Улучшенная солнечная панель",
   "block.advanced_solars.hybrid_solar_panel": "Гибридная солнечная панель",
-  "block.advanced_solars.ultimate_solar_panel": "Ультимейтная солнечная панель",
+  "block.advanced_solars.ultimate_hybrid_solar_panel": "Ультимейтная солнечная панель",
   "item.advanced_solars.sunnarium": "Саннариум",
   "item.advanced_solars.sunnarium_alloy": "Сплав саннариума",
   "item.advanced_solars.irradiant_uranium": "Излучающий уран",
