added mt core texture, added lang for molecular transformer

--- a/src/main/resources/assets/advanced_solars/lang/en_us.json
+++ b/src/main/resources/assets/advanced_solars/lang/en_us.json
@@ -2,6 +2,7 @@
   "block.advanced_solars.advanced_solar_panel": "Advanced Solar Panel",
   "block.advanced_solars.hybrid_solar_panel": "Hybrid Solar Panel",
   "block.advanced_solars.ultimate_hybrid_solar_panel": "Ultimate Hybrid Solar Panel",
+  "block.advanced_solars.molecular_transformer": "Molecular Transformer",
   "item.advanced_solars.sunnarium": "Sunnarium",
   "item.advanced_solars.sunnarium_alloy": "Sunnarium Alloy",
   "item.advanced_solars.irradiant_uranium": "Irradiant Uranium",
@@ -13,6 +14,7 @@
   "item.advanced_solars.irradiant_reinforced_plate": "Irradiant Reinforced Plate",
   "item.advanced_solars.sunnarium_part": "Sunnarium Part",
   "item.advanced_solars.iridium_ingot": "Iridium Ingot",
+  "item.advanced_solars.mt_core": "MT Core",
   "item.advanced_solars.advanced_solar_helmet": "Advanced Solar Helmet",
   "item.advanced_solars.hybrid_solar_helmet": "Hybrid Solar Helmet",
   "item.advanced_solars.ultimate_hybrid_solar_helmet": "Ultimate Hybrid Solar Helmet",
