updated ic2, bumped required ic2c version

--- a/src/main/resources/assets/advanced_solars/lang/en_us.json
+++ b/src/main/resources/assets/advanced_solars/lang/en_us.json
@@ -25,8 +25,7 @@
   "item_info.advanced_solars.helmet_production":"Produces %s EU/t while the sky is visible;",
   "item_info.advanced_solars.helmet_lower_production":"Otherwise produces %s EU/t while the moon is visible or during rain",
   "item_info.advanced_solars.electric_lower_production":"Lower Generation: %s EU",
-  "wiki.advanced_solars.category.blocks": "Advanced Solars Classic Blocks",
-  "wiki.advanced_solars.category.items": "Advanced Solars Classic Items",
+  "wiki.advanced_solars.category": "Advanced Solars Classic Items and Blocks",
   "wiki.advanced_solars.header.main": "Advanced Solars classic blocks and items",
   "wiki.advanced_solars.preview.main.desc": "Advanced solars adds a few solar panels and solar helmets that you may find useful. Here you can find info on what they do.",
   "wiki.advanced_solars.preview.advanced_solar_helmet.desc": "Advanced solar helmets are solar helmets with eu outputs equivalent to the panels. can be added to modular armors",
