--- a/src/main/resources/assets/advanced_solars/lang/uk_ua.json
+++ b/src/main/resources/assets/advanced_solars/lang/uk_ua.json
@@ -1,7 +1,7 @@
 {
   "block.advanced_solars.advanced_solar_panel": "Просунута сонячна панель",
   "block.advanced_solars.hybrid_solar_panel": "Гібридна сонячна панель",
-  "block.advanced_solars.ultimate_hybrid_solar_panel": "Кінцева гібридна сонячна панель",
+  "block.advanced_solars.ultimate_hybrid_solar_panel": "Універсальна гібридна сонячна панель",
   "block.advanced_solars.molecular_transformer": "Молекулярний трансформатор",
   "item.advanced_solars.sunnarium": "Суннарій",
   "item.advanced_solars.sunnarium_alloy": "Сплав суннарію",
