added rei compat

--- a/src/main/resources/assets/advanced_solars/lang/en_us.json
+++ b/src/main/resources/assets/advanced_solars/lang/en_us.json
@@ -25,6 +25,9 @@
   "item_info.advanced_solars.helmet_production":"Produces %s EU/t while the sky is visible;",
   "item_info.advanced_solars.helmet_lower_production":"Otherwise produces %s EU/t while the moon is visible or during rain",
   "item_info.advanced_solars.electric_lower_production":"Lower Generation: %s EU",
+  "item_info.advanced_solars.molecular.input": "Input: %s",
+  "item_info.advanced_solars.molecular.output": "Output: %s",
+  "item_info.advanced_solars.molecular.eu": "Energy: %s",
   "wiki.advanced_solars.category": "Advanced Solars Classic Items and Blocks",
   "wiki.advanced_solars.header.main": "Advanced Solars classic blocks and items",
   "wiki.advanced_solars.preview.main.desc": "Advanced solars adds a few solar panels and solar helmets that you may find useful. Here you can find info on what they do.",
