added tootips to blocks

--- a/src/main/resources/assets/advanced_solars/lang/en_us.json
+++ b/src/main/resources/assets/advanced_solars/lang/en_us.json
@@ -28,6 +28,9 @@
   "item_info.advanced_solars.molecular.input": "Input: %s",
   "item_info.advanced_solars.molecular.output": "Output: %s",
   "item_info.advanced_solars.molecular.eu": "Energy: %s",
+  "tooltip.item.advanced_solars.eu_reader.production": "Produces %s EU/t during the day",
+  "tooltip.item.advanced_solars.eu_reader.lower_production": "Produces %s EU/t during the night/rain",
+  "tooltip.advanced_solars.molecular_transformer.consumption": "Consumes: Variable EU/t",
   "wiki.advanced_solars.category": "Advanced Solars",
   "wiki.advanced_solars.header.main": "Advanced Solars Classic Items and Blocks",
   "wiki.advanced_solars.preview.main.desc": "Advanced solars adds a few solar panels and solar helmets that you may find useful. Here you can find info on what they do.",
